# airflow-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIG.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  server.json
.astro/: config.yaml
.github/workflows/: pytest.yml  python-publish.yml
airflow-mcp-plugin/: CONFIG.md  README.md  pyproject.toml  pyrightconfig.json
airflow-mcp-plugin/src/airflow_mcp_plugin/: plugin.py
airflow-mcp-plugin/tests/: test_toolset.py
airflow-mcp-server/: Dockerfile  README.md  pyproject.toml
airflow-mcp-server/src/airflow_mcp_server/: __init__.py  __main__.py  server.py
airflow-mcp-server/src/airflow_mcp_server/client/: airflow_client.py
airflow-mcp-server/src/airflow_mcp_server/parser/: operation_parser.py
airflow-mcp-server/src/airflow_mcp_server/tools/: airflow_dag_tools.py  airflow_tool.py  base_tools.py  models.py  tool_manager.py
airflow-mcp-server/tests/: conftest.py
airflow-mcp-server/tests/client/: test_airflow_client.py
airflow-mcp-server/tests/parser/: test_operation_parser.py
airflow-mcp-server/tests/tools/: test_airflow_tool.py  test_models.py  test_tool_manager.py
airflow-wingman/: pyproject.toml
airflow-wingman/src/airflow_wingman/: llm_client.py  llms_models.py  mcp_tools.py  prompt_engineering.py  views.py
airflow-wingman/src/airflow_wingman/templates/: wingman_chat.html
dev_notes/: CAVEAT.md  Diagram.md
plugins/airflow-wingman/: plugin.py  pyproject.toml
plugins/airflow-wingman/templates/: wingman_chat.html
samples/dags/: bash_REPL_dag.py  python_REPL_dag.py  web_search_dag.py
samples/resources/: dags.md
src/airflow_mcp_server/: __init__.py  hierarchical_manager.py  prompts.py  resources.py  server.py  server_safe.py  server_unsafe.py
src/airflow_mcp_server/client/: airflow_client.py
src/airflow_mcp_server/tools/: tool_manager.py
src/airflow_mcp_server/utils/: category_mapper.py
tests/: conftest.py  test_category_mapper.py  test_config.py  test_hierarchical_manager.py  test_knowledge_resources.py  test_main.py  test_server.py
tests/client/: test_airflow_client.py
tests/parser/: openapi.json  test_operation_parser.py
tests/tools/: test_airflow_tool.py  test_models.py
