[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-wingman"
version = "0.1.0"
description = "Airflow plugin to enable LLMs chat"
authors = [
    {name = "Abhishek Bhakat", email = "abhishek.bhakat@hotmail.com"}
]
dependencies = [
    "apache-airflow>=2.10.0",
]

[project.urls]
repository = "https://github.com/abhishekbhakat/airflow-mcp-server"

[tool.setuptools]
packages = ["airflow-wingman"]
